Capstone/kubernetes/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: web
        image: <ecr link>/<image name>
        ports:
        - containerPort: 5002
        readinessProbe:
          httpGet:
            path: /
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5002
          initialDelaySeconds: 15
          periodSeconds: 15
