Capstone/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
spec:
  selector:
    app: flaskapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
